Fix/change error font crea form (#25)
* fix: added font family to error messages

* fix: inscrivez-vous leads to signup page

* fix: link was too long

---------

--- a/html/Floma/public/css/back.css
+++ b/html/Floma/public/css/back.css
@@ -318,7 +318,9 @@ input::placeholder {
 
 .error-message {
     color: red;
+    font-family: var(--noto);
     font-size: var(--text-size);
+    font-weight: normal;
 }
 
 /* Black button */
